--- a/src/light/.vscode/settings.json
+++ b/src/light/.vscode/settings.json
@@ -7,6 +7,8 @@
         "unordered_map": "cpp",
         "vector": "cpp",
         "initializer_list": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "*.tcc": "cpp",
+        "sstream": "cpp"
     }
 }
